--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="keywords" content="hotel, boston hotel, new england hotel" />
     <title>Hotel BT | Welcome</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/f32697b2c3.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -23,6 +27,57 @@
           </ul>
         </div>
       </nav>
+      <div id="showcase">
+        <div class="container">
+          <div class="showcase-content">
+            <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              vero ducimus harum error. Earum, voluptas?
+            </p>
+            <a class="btn" href="about.html">About Our Hotel</a>
+          </div>
+        </div>
+      </div>
     </header>
+    <section id="home-info" class="bg-dark">
+      <div class="info-img"></div>
+      <div class="info-content">
+        <h2><span class="text-primary">The History </span>Of Our Hotel</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
+          accusantium consectetur magnam maiores est, iure soluta sequi
+          veritatis aliquam eaque, facere doloremque ad perspiciatis ullam
+          facilis repellat at amet error.
+        </p>
+        <a href="about.html" class="btn btn-light">Read More</a>
+      </div>
+    </section>
+    <section id="features">
+      <div class="box bg-light">
+        <i class="fas fa-hotel fa-3x"></i>
+        <h3>Great Location</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, odit.
+        </p>
+      </div>
+      <div class="box bg-primary">
+        <i class="fas fa-drumstick-bite fa-3x"></i>
+        <h3>Free Meals</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, odit.
+        </p>
+      </div>
+      <div class="box bg-light">
+        <i class="fas fa-dumbbell fa-3x"></i>
+        <h3>Fitness Room</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, odit.
+        </p>
+      </div>
+    </section>
+    <footer id="main-footer" class="clr">
+      <p>Hotel BT &copy; 2019, All Right Reserved</p>
+    </footer>
   </body>
 </html>
